--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy React App to GitHub Pages
 on:
   push:
     branches:
-      - main # Runs when changes are pushed to 'main' branch
+      - master # Runs when changes are pushed to 'main' branch
 
 jobs:
   build-and-deploy:
