--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,10 @@ name: Deploy React App to GitHub Pages
 on:
   push:
     branches:
-      - master # Runs when changes are pushed to 'main' branch
+      - main
+
+permissions:
+  contents: write  # Allows pushing to gh-pages branch
 
 jobs:
   build-and-deploy:
