--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.45",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "cross-spawn": ">=7.0.5"
   }
 }
