--- a/package.json
+++ b/package.json
@@ -44,5 +44,7 @@
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
     "cross-spawn": ">=7.0.5"
-  }
+  },
+  "homepage": "https://santoshkumarpottumuthu.github.io/portfolio"
+
 }
